--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>grph</groupId>
 	<artifactId>grph</artifactId>
-	<version>2.1.2</version>
+	<version>2.1.2-feup-infolab</version>
 	<name>The high performance graph library for Java</name>
 
 	<repositories>
